# software_testing_lab

lab1/: main.cpp
selenium_web_testing/: bugzilla.py  form_auto.py  main.py  pyproject.toml
selenium_web_testing/lab4/: test_alerts.py  test_cookies.py  test_frames.py  test_interactions.py  test_navigation.py  test_print_options.py  test_prints_page.py  test_virtual_authenticator.py
selenium_web_testing/lab6/: auto_report.py  check_login.py  creds.csv  form.py
