[project]
name = "selenium-web-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "selenium>=4.40.0",
]
